globus-gridftp-server-control (5.1-1+gt6.@distro@) @distro@; urgency=low

  * fix mem error on empty mlsc responses

 -- Globus Toolkit <support@globus.org>  Thu, 13 Jul 2017 11:27:52 -0500

globus-gridftp-server-control (5.0-1+gt6.@distro@) @distro@; urgency=low

  * extend response_type to allow for ftp error codes

 -- Globus Toolkit <support@globus.org>  Fri, 03 Mar 2017 10:12:49 -0600

globus-gridftp-server-control (4.2-1+gt6.@distro@) @distro@; urgency=low

  * Update bug report URL

 -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:36 -0400

globus-gridftp-server-control (4.1-1+gt6.@distro@) @distro@; urgency=low

  * Spelling

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:34:40 -0400

globus-gridftp-server-control (4.0-2+gt6.@distro@) @distro@; urgency=low

  * Update XIO Driver package names

 -- Globus Toolkit <support@globus.org>  Tue, 15 Dec 2015 10:41:41 -0500

globus-gridftp-server-control (4.0-1+gt6.@distro@) @distro@; urgency=low

  * Add correct behavior for data auth error code

 -- Globus Toolkit <support@globus.org>  Mon, 23 Nov 2015 15:20:53 -0600

globus-gridftp-server-control (3.7-1+gt6.@distro@) @distro@; urgency=low

  * remove dead code

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 17:06:16 -0400

globus-gridftp-server-control (3.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gridftp-server-control (3.5-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gridftp-server-control (3.5-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gridftp-server-control (3.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert
