@@ -1,3 +1,9 @@
+globus-gridftp-server-control (5.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * allow 400 responses to stat failures
+
+ -- Globus Toolkit <support@globus.org>  Mon, 07 Aug 2017 15:03:46 -0500
+
 globus-gridftp-server-control (5.1-1+gt6.@distro@) @distro@; urgency=low
 
   * fix mem error on empty mlsc responses
